--- a/.github/workflows/Lienol.yml
+++ b/.github/workflows/Lienol.yml
@@ -33,6 +33,7 @@ on:
           - 'phicomm_k3'
           - '1907-phicomm-k3'
           - 'x86_64'
+          - 'cmiot_ax18'
       INFORMATION_NOTICE:
         description: 'Telegram或pushplus信息通知'
         required: true
